@@ -74,8 +74,6 @@ The socket is set to non-blocking mode.
 
 =item * Proto : Int
 
-=item * Blocking : Int
-
 =item * Timeout : Double
 
 =item * Listen : Int
