@@ -12,6 +12,7 @@
     * Remove new_from_instance from IO::Socket, IO::Socket::IP, IO::Socket::Unix.
     * fd field in IO::Handle is renamed to FD.
     * autoflush field in IO::Handle is renamed to AutoFlush.
+    * Blocking field is moved from IO::Socket to IO::Handle.
 0.211002 2023-12-07
   [Prerequirement Changes]
     * Require SPVM::Sys 0.510.
